Updated the Monitoring, Alerts and Reporting guide based on l10n feedback.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Chart_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Chart_widget.adoc
@@ -14,7 +14,7 @@ image:2269.png[]
 
 . In the *Timer* area, click the *Run* drop down to specify how often you want the widget data to get updated.
   The options displayed will depend on which *Run* option you choose.
-  Select *Hourly, Daily*, *Weekly*, or *Monthly*.
+  Select *Hourly*, *Daily*, *Weekly*, or *Monthly*.
 +
 
 image:2270.png[]
