--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_organize_reports_in_Report_Menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_organize_reports_in_Report_Menus.adoc
@@ -8,8 +8,8 @@
 . Expand the *Report* accordion and menus using the triangles to the left of the item name until you are able to select the subfolder where you want to put reports.
 . Choose one of the following actions:
 +
-* To add a report, select a report from the *Available Reports* area on the right and click  image:1876.png[] *(Move selected reports left)*.
-* To remove a report from a folder, select the report from the *Selected Reports* area and click  image:1878.png[] *(Move selected reports right)*.
+* To add a report, select the report from the *Available Reports* area, and click image:1876.png[].
+* To remove a report, select the report from the *Selected Reports* area, and click  image:1878.png[].
 * To move a report to the top of the folder, select the report and click  image:2305.png[] *(Move selected reports to top)*.
 * To move a report up one place in the folder, select the report and click  image:2290.png[] *(Move selected reports up)*.
 * To move a report down one place in the folder, select the report and click  image:2289.png[] *(Move selected reports down)*.
