BZ#1351400: Minor peer review edits

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Flavor.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Flavor.adoc
@@ -2,7 +2,7 @@
 = Viewing a Flavor
 
 You can click on a specific flavor to view its details.
-The screen provides you with a Flavor Accordion and a Flavor Summary. 
+The screen provides you with a flavor accordion and a flavor summary. 
 
 * Use *Flavor Summary Views* to change how you are looking at the *Summary*. 
 * Use the *Flavor Accordion* to view the *Properties* of the flavor and its *Relationships*. 
