--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Flavor_Relationships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Flavor_Relationships.adoc
@@ -1,10 +1,10 @@
 = Viewing Flavor Relationships
 
-Use the Flavor Accordion's *Relationship* section to see items related to the Flavor. 
+Use the *Relationship* section in the *Flavor Accordion* to see items related to the flavor. 
 
 
 . Navigate to menu:Compute[Clouds > Flavors]. 
 . Click a flavor to view the configuration. 
-. From the Flavor Accordion, click *Relationships*. 
+. From the *Flavor Accordion*, click *Relationships*. 
 . Click the type of *Resource* to see the flavor's relationships. 
 
