--- a/doc-Managing_Infrastructure_and_Inventory/topics/Flavors.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Flavors.adoc
@@ -2,7 +2,7 @@
 = Flavors
 
 Flavors indicate the resource profiles available for instances.
-Each flavor contains a value set for CPUs, CPU Cores and memory. Flavors allow you to pre-configure resource settings, which you can then apply during instance provisioning. You can also change the flavor of a provisioned instance; see xref:_to_resize_an_instance_via_flavor[] for instructions.
+Each flavor contains a value set for CPUs, CPU cores and memory. Flavors allow you to pre-configure resource settings, which you can then apply during instance provisioning. You can also change the flavor of a provisioned instance; see xref:_to_resize_an_instance_via_flavor[] for instructions.
 
 {product-title} provides the ability to view individual flavor information and instances currently using the flavor.
 
