Add provider compliance events to Events appendix.
These events have appeared in euwe release:
https://bugzilla.redhat.com/show_bug.cgi?id=1411337 (master)
https://bugzilla.redhat.com/show_bug.cgi?id=1411364 (euwe)

--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -189,6 +189,15 @@ credentials fail.
 automate, for future use in policies._ Check the condition when the
 provider authentication credentials entered in the user interface are valid.
 
+|Provider Compliance Check |Check the condition when a compliance check is
+performed on a provider.
+
+|Provider Compliance Failed |Check the condition when a provider fails a
+compliance check.
+
+|Provider Compliance Passed |Check the condition when a provider passes a
+compliance check.
+
 |Service Provision Complete |Check the condition when the service
 provision is complete.
 
