--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -46,7 +46,7 @@ Adding new Schedule details.
 * Select a *Starting Time* based on a 24 hour clock in the {product-title} appliance's Time Zone.
 
 . Use the *E-Mail after Running* feature to send an email after the report has been generated to selected users. The email will include a link to the report.
-* check *Send an E-mail*. 
+* Check *Send an E-mail*. 
 * In *From (leave blank for default)*, type in the sending email.
 * Use *Add a User*, to select a specific user.
   The user must have a valid email address entered under accounts.
