Fixed typo for image file.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
@@ -10,7 +10,7 @@ The following example shows steps to check the host's log for a failure to valid
 . Click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Alert*).
 . In the *Info* area:
 +
-image:hostdLodAlert.png[]
+image:hostdLogAlert.png[]
 +
 * Type in a *Description* for the alert.
 * From *Based On*, select *Host/Node*.
