--- a/doc-Installing_on_VMware_vSphere/cfme/master.adoc
+++ b/doc-Installing_on_VMware_vSphere/cfme/master.adoc
@@ -32,3 +32,10 @@ include::common/initial-login.adoc[]
 
 include::common/initial-login-changepw.adoc[]
 
+[appendix]
+[[appendix]]
+== Appendix
+
+[[appliance-console-cli]]
+=== Appliance Console Command-Line Interface (CLI)
+include::common/appe-appliance-console-cli.adoc[]
