--- a/doc-Installing_on_AWS/miq/index.adoc
+++ b/doc-Installing_on_AWS/miq/index.adoc
@@ -26,3 +26,11 @@ include::topics/additional_configuration.adoc[]
 [[Initial_Login]]
 include::common/initial-login.adoc[]
 
+[appendix]
+[[appendix]]
+== Appendix
+
+[[appliance-console-cli]]
+=== Appliance Console Command-Line Interface (CLI)
+include::common/appe-appliance-console-cli.adoc[]
+
