--- a/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
@@ -28,3 +28,11 @@ include::common/initial-login.adoc[]
 === Changing the Default Login Password
 
 include::common/initial-login-changepw.adoc[]
+
+[appendix]
+[[appendix]]
+== Appendix
+
+[[appliance-console-cli]]
+=== Appliance Console Command-Line Interface (CLI)
+include::common/appe-appliance-console-cli.adoc[]
