--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -32,7 +32,12 @@ include::common/initial-login.adoc[]
 
 include::common/initial-login-changepw.adoc[]
 
-[[Appendix]]
+[appendix]
+[[appendix]]
+== Appendix
+
+[[appliance-console-cli]]
+=== Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
 
 
