--- a/common/appe-appliance-console-cli.adoc
+++ b/common/appe-appliance-console-cli.adoc
@@ -1,6 +1,6 @@
 :numbered!:
 
-The `appliance_console_cli` feature is currently a subset of the full functionality of the `appliance_console` itself, and covers functions most likely to be scripted using the command-line interface (CLI). 
+Currently, the `appliance_console_cli` feature is a subset of the full functionality of the `appliance_console` itself, and covers functions most likely to be scripted using the command-line interface (CLI). 
 
 . After starting the {product-title} appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the root user. 
 . Enter the `appliance_console_cli` or `appliance_console_cli --help` command to see a list of options available with the command, or simply enter `appliance_console_cli --option <argument>` directly to use a specific option.
