added note to chargeback report about total costs

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
@@ -3,6 +3,11 @@
 
 {product-title} allows you to create chargeback reports to monitor costs you charged.
 
+[Important]
+====
+When creating a chargeback report please note that the *Total Cost* is the complete cost for the chosen workload over the selected time frame. This sum is based on _all fields_ assigned to the chargeback rate. When adding cost related columns to display on your report, please be sure to select all rate assigned fields to present a comprehensive accounting of total costs.  
+====
+
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Reports* accordion.
 . Click  image:1847.png[]*(Configuration)*,  image:1862.png[] *(Add a new Report)*.
