--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
@@ -3,7 +3,7 @@
 
 {product-title} allows you to create chargeback reports to monitor costs you charged.
 
-[Important]
+[NOTE]
 ====
 When creating a chargeback report please note that the *Total Cost* is the complete cost for the chosen workload over the selected time frame. This sum is based on _all fields_ assigned to the chargeback rate. When adding cost related columns to display on your report, please be sure to select all rate assigned fields to present a comprehensive accounting of total costs.  
 ====
