--- a/common/openstack/adding-an-openstack-infrastructure-provider.adoc
+++ b/common/openstack/adding-an-openstack-infrastructure-provider.adoc
@@ -31,7 +31,8 @@ NOTE: For more information, see the definition of host aggregates and availabili
 .. Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider. If your provider is an undercloud, use its hostname (see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/director-installation-and-usage/#sect-Setting_the_Hostname_for_the_System[Setting the Hostname for the System] in Red Hat OpenStack Platform _Director Installation and Usage_ for more details)
 .. In *API Port*, set the public port used by the OpenStack Keystone service. By default, OpenStack uses port 5000 for this.
 .. Select the appropriate *Security Protocol* used for authenticating with your OpenStack provider.
-.. In the *Username* field, enter the name of an OpenStack user with privileged access (for example, *admin*). Then, provide its corresponding password in the *Password* and *Confirm Password* fields.
+.. In the *Username* field, enter the name of a user in the OpenStack environment to which the *admin* role for the relevant domain has been assigned.
+.. In the *Password* and *Confirm Password* fields, enter the password for the user.
 .. Click *Validate* to confirm {product-title} can connect to the OpenStack provider.
 
 . Next, configure how {product-title} should receive events from the OpenStack provider. Click the *Events* tab in the *Endpoints* section to start.
