--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -62,18 +62,20 @@ image:5780.png[]
 
 [NOTE]
 =====
-When enabling Capacity & Utilization for metrics gathering over a period of time, it is recommended that the vmdb size scale accordingly. Evaluate the number of instances in your provider inventory and storage duration requirements to plan for increased vmdb sizing requirements. 
+When enabling Capacity & Utilization for metrics gathering over a period of time, it is recommended that the VMDB size scale accordingly. Evaluate the number of instances in your provider inventory and storage duration requirements to plan for increased VMDB sizing requirements. 
 =====
 
-Use the following information below to plan for your increased vmdb needs when working with metrics gathering
+Use the following information below to plan for your increased VMDB needs when working with metrics gathering:
 
 * Realtime metrics data are stored for 4 hours.
 
 * Rollup metrics data are stored for 6 months.
 
-The table below details the number of records created for a single Openstack instance:
+The table below details the number of records created for a single OpenStack instance:
 
-image:metricsTable.png[]
+image:metricsTimeTable.png[]
+
+* Metrics data storage times can be configured by editing the Advanced Settings.
 
 
 
