small edit - incorporated tech review feedback

--- a/common/appe-appliance-console-cli.adoc
+++ b/common/appe-appliance-console-cli.adoc
@@ -24,7 +24,7 @@ Currently, the `appliance_console_cli` feature is a subset of the full functiona
 
 |
 
-							create a new region in the database (requires database credentials passed)
+							region number (create a new region in the database - requires database credentials passed)
 
 
 
@@ -35,7 +35,7 @@ Currently, the `appliance_console_cli` feature is a subset of the full functiona
 
 |
 
-							create a database on the current appliance
+							internal database (create a database on the current appliance)
 
 
 
