--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -52,7 +52,7 @@ Red Hat recommends allocating the virtual machine disk fully at the time of crea
 * Virtual Machine Count: the most important factor in the calculation of virtual machine database (VMDB) size over time.
 * Host Count: the number of hosts associated with the provider.
 * Storage Count: the number of individual storage elements as seen from the perspective of the provider or host. It is not the total number of virtual disks for all virtual machines.
-* Metrics Count: CloudForms will create a number of records/minute, rolled up hourly and daily, for each provider instance once Capacity & Utilization is enabled. See the second table for information om vmdb sizing to include metrics gathering.
+* Metrics Count: CloudForms will create a number of records/minute, rolled up hourly and daily, for each provider instance once Capacity & Utilization is enabled. See the second table for information on VMDB sizing to include metrics gathering.
 
 
 
