--- a/common/provisioning-dialogs-customization.adoc
+++ b/common/provisioning-dialogs-customization.adoc
@@ -1,6 +1,6 @@
 The default set of provisioning dialogs shows all possible options. However, {product-title} also provides the ability to customize which tabs and fields are shown. You can decide what fields are required to submit the provisioning request or set default values.
 
-For each type of provisioning, there is a dialog that can be created to adjust what options are presented. While samples are provided containing all possible fields for provisioning, you can remove what fields are shown. However, you cannot add fields or tabs.
+For each type of provisioning, there is a dialog that can be created to adjust what options are presented. While samples are provided containing all possible fields for provisioning, you can remove what fields are shown but cannot add new fields or tabs.
 
 Edit the dialogs to:
 
