--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Working_with_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Working_with_Requests.adoc
@@ -83,7 +83,7 @@ You can set thresholds for automatic approval of provisioning requests and, ther
 
 To enable a global set of default approval values, edit the defaults instance by navigating to menu:Automate[Explorer], then menu:DOMAIN[Cloud|Infrastructure > VM > Provisioning > StateMachines > ProvisionRequestApproval] in the accordion menu. The parameters in this instance are used by the methods in that same class. By default, the maximum number of virtual machines or instances that can be automatically approved for provisioning is 1. To skip the check for the maximum number of virtual machines, set this field to 0. Set this field to -1 to force manual approval. At a minimum, you must change this parameter for all others to be validated.
 
-. Navigate to menu:Automate[Explorer],.
+. Navigate to menu:Automate[Explorer].
 . From the tree in the accordion menu, select menu:DOMAIN[Cloud > VM > Provisioning > StateMachines > ProvisionRequestApproval Class].
 +
 [NOTE]
